--- a/src/macros.tex
+++ b/src/macros.tex
@@ -1,5 +1,6 @@
 % Environments 
 \newcommand{\underlinesymbol}[1]{\underline{\vphantom{y}#1}}
+\newcommand{\st}{\text{ s.t. }}
 % Set of Macros 
 % _______________
 % General Defeasible Stuff
@@ -13,7 +14,7 @@
 \newcommand{\K}{\mathbb{K}}                         % K
 \newcommand{\EK}{\mathbb{K^{\preceq}}}              % Extended K
 \newcommand{\T}{\mathbb{T}}                         % Triadic 
-\newcommand{\FC}{\mathbb{K} = (G,M,I)}              % Formal Context
+\newcommand{\FC}{ \mathbb{K} = (\G,\M,\I)}              % Formal Context
 \newcommand{\EFC}{\EK = (G,M,I,\preceq)}            % Extended Formal Context
 \newcommand{\TC}{\mathbb{T} = (G,M,V,X)}            % Triadic Formal Context
 
@@ -27,9 +28,40 @@
 % ---------------
 % SETS
 % --------------
-\newcommand{{\A}}{{\scriptstyle {A}}}
-\newcommand{{\B}}{{\scriptstyle {B}}}
-\newcommand{{\C}}{{\scriptstyle {C}}}
-\newcommand{{\D}}{{\scriptstyle {D}}}
-\newcommand{{\X}}{{\scriptstyle {X}}}
-\newcommand{{\Y}}{{\scriptstyle {Y}}}
+\newcommand{\A}{\scalebox{1.2}{$\scriptstyle A$}}
+\newcommand{\B}{\scalebox{1.2}{$\scriptstyle B$}}
+\newcommand{\C}{\scalebox{1.2}{$\scriptstyle C$}}
+\newcommand{\D}{\scalebox{1.2}{$\scriptstyle D$}}
+\newcommand{\E}{\scalebox{1.2}{$\scriptstyle E$}}
+\newcommand{\F}{\scalebox{1.2}{$\scriptstyle F$}}
+\newcommand{\G}{\scalebox{1.2}{$\scriptstyle G$}}
+\newcommand{\Hi}{\scalebox{1.2}{$\scriptstyle H$}}
+\newcommand{\I}{\scalebox{1.2}{$\scriptstyle I$}}
+\newcommand{\J}{\scalebox{1.2}{$\scriptstyle J$}}
+\newcommand{\Ki}{\scalebox{1.2}{$\scriptstyle K$}}
+\newcommand{\Li}{\scalebox{1.2}{$\scriptstyle L$}}
+\newcommand{\M}{\scalebox{1.2}{$\scriptstyle M$}}
+\newcommand{\N}{\scalebox{1.2}{$\scriptstyle N$}}
+\newcommand{\Oi}{\scalebox{1.2}{$\scriptstyle O$}}
+\newcommand{\Pii}{\scalebox{1.2}{$\scriptstyle P$}}
+\newcommand{\Q}{\scalebox{1.2}{$\scriptstyle Q$}}
+\newcommand{\R}{\scalebox{1.2}{$\scriptstyle R$}}
+\newcommand{\Si}{\scalebox{1.2}{$\scriptstyle S$}}
+\newcommand{\Ti}{\scalebox{1.2}{$\scriptstyle T$}}
+\newcommand{\U}{\scalebox{1.2}{$\scriptstyle U$}}
+\newcommand{\V}{\scalebox{1.2}{$\scriptstyle V$}}
+\newcommand{\W}{\scalebox{1.2}{$\scriptstyle W$}}
+\newcommand{\X}{\scalebox{1.2}{$\scriptstyle X$}}
+\newcommand{\Y}{\scalebox{1.2}{$\scriptstyle Y$}}
+\newcommand{\Z}{\scalebox{1.2}{$\scriptstyle Z$}}
+
+
+% \newcommand{\A}{\scalebox{1.2}{\textsc{a}}}
+% \newcommand{\B}{\scalebox{1.2}{\textsc{b}}}
+% \newcommand{\C}{\scalebox{1.2}{\textsc{c}}}
+% \newcommand{\D}{\scalebox{1.2}{\textsc{d}}}
+% \newcommand{\X}{\scalebox{1.2}{\textsc{x}}}
+% \newcommand{\Y}{\scalebox{1.2}{\textsc{y}}}
+
+% \newcommand{{\X}}{\textsc{x}}
+% \newcommand{{\Y}}{\textsc{y}}
