--- a/src/main.tex
+++ b/src/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[runningheads]{llncs}
 \input{preamble.tex}
 \title{Lifting Formal Concept Analysis to System-Z and Beyond}
 \author{Lucas Carr}
@@ -8,13 +8,23 @@
 
 \input{macros}
 \maketitle
-\tableofcontents
+\input{abstract.tex}
 %
-\clearpage
+\input{introduction.tex}
+%
+\input{classical.tex}
+%
+\input{nmr.tex}
+%
+\input{fca.tex}
+%
+\input{FCA-Style Rational Consequence.tex}
+%
 \input{implications.tex}
 %
 \clearpage
-
+\input{example.tex}
+%
 \input{glossary.tex}
 
 \bibliographystyle{plain}
