--- a/src/refs.bib
+++ b/src/refs.bib
@@ -1,35 +1,79 @@
-@incollection{Ganter_Obiedkov_Triadic_implications,
-    address = {Berlin, Heidelberg},
-    title = {Implications in {Triadic} {Formal} {Contexts}},
-    volume = {3127},
-    isbn = {978-3-540-22392-4 978-3-540-27769-9},
-    url = {http://link.springer.com/10.1007/978-3-540-27769-9_12},
-    abstract = {There are diﬀerent possibilities to deﬁne implications in a triadic formal context. We discuss several such notions. Our main interest is to give compact descriptions and to use them for an algorithm that generates these implications. Our ﬁndings are illustrated by a small example.},
-    language = {en},
-    urldate = {2024-08-27},
-    booktitle = {Conceptual {Structures} at {Work}},
-    publisher = {Springer Berlin Heidelberg},
-    author = {Ganter, Bernhard and Obiedkov, Sergei},
-    editor = {Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y. and Weikum, Gerhard and Wolff, Karl Erich and Pfeiffer, Heather D. and Delugach, Harry S.},
-    year = {2004},
-    doi = {10.1007/978-3-540-27769-9_12},
-    note = {Series Title: Lecture Notes in Computer Science},
-    pages = {186--195},
-    file = {PDF:/Users/anton/Zotero/storage/I5EF923L/Ganter and Obiedkov - 2004 - Implications in Triadic Formal Contexts.pdf:application/pdf},
+@incollection{Ganter:2004,
+   ADDRESS    = {Berlin, Heidelberg},
+   TITLE      = {Implications in {Triadic} {Formal} {Contexts}},
+   VOLUME     = {3127},
+   ISBN       = {978-3-540-22392-4 978-3-540-27769-9},
+   URL        = {http://link.springer.com/10.1007/978-3-540-27769-9_12},
+   ABSTRACT   = {There are diﬀerent possibilities to deﬁne implications in a triadic formal context. We discuss several such notions. Our main interest is to give compact descriptions and to use them for an algorithm that generates these implications. Our ﬁndings are illustrated by a small example.},
+   LANGUAGE   = {en},
+   URLDATE    = {2024-08-27},
+   BOOKTITLE  = {Conceptual {Structures} at {Work}},
+   PUBLISHER  = {Springer Berlin Heidelberg},
+   AUTHOR     = {Ganter, Bernhard AND Obiedkov, Sergei},
+   EDITOR     = {Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y. and Weikum, Gerhard and Wolff, Karl Erich and Pfeiffer, Heather D. and Delugach, Harry S.},
+   YEAR       = {2004},
+   DOI        = {10.1007/978-3-540-27769-9_12},
+   NOTE       = {Series Title: Lecture Notes in Computer Science},
+   PAGES      = {186--195},
+   FILE       = {PDF:/Users/anton/Zotero/storage/I5EF923L/Ganter and Obiedkov - 2004 - Implications in Triadic Formal Contexts.pdf:application/pdf},
+}
+@inproceedings{Pearl:1990,
+   AUTHOR     = {Pearl, Judea},
+   TITLE      = {System Z: a natural ordering of defaults with tractable applications to nonmonotonic reasoning},
+   YEAR       = {1990},
+   ISBN       = {1558801058},
+   PUBLISHER  = {Morgan Kaufmann Publishers Inc.},
+   ADDRESS    = {San Francisco, CA, USA},
+   ABSTRACT   = {Recent progress towards unifying the probabilistic and preferential models semantics for non-monotonic reasoning has led to a remarkable observation: Any consistent system of default rules imposes an unambiguous and natural ordering on these rules which, to emphasize its simple and basic character, we term "Z-ordering." This ordering can be used with various levels of refinement, to prioritize conflicting arguments, to rank the degree of abnormality of states of the world, and to define plausible consequence relationships. This paper defines the Z-ordering, briefly mentions its semantical origins, and illustrates two simple entailment relationships induced by the ordering. Two extensions are then described, maximum-entropy and conditional entailment, which trade in computational simplicity for semantic refinements.},
+   BOOKTITLE  = {Proceedings of the 3rd Conference on Theoretical Aspects of Reasoning about Knowledge},
+   PAGES      = {121–135},
+   NUMPAGES   = {15},
+   LOCATION   = {Pacific Grove, California},
+   SERIES     = {TARK '90}
+}
+@article{Kaliski:2020,
+   TITLE      = {An overview of KLM-style defeasible entailment},
+   AUTHOR     = {Kaliski, Adam},
+   YEAR       = {2020}
+}
+@book{Ganter:2016,
+   TITLE      = {Conceptual exploration},
+   AUTHOR     = {Ganter, Bernhard
+               AND Obiedkov, Sergei
+               AND Rudolph, Sebastian
+               AND Stumme, Gerd},
+   YEAR       = {2016},
+   PUBLISHER  = {Springer}
+}
+@misc{Wille:1996,
+   TITLE      = {Formal concept analysis},
+   AUTHOR     = {Wille, Rudolf AND Ganter, Bernhard},
+   YEAR       = {1996}
+}
+@misc{Kraus:2002,
+   TITLE      = {Nonmonotonic {Reasoning}, {Preferential} {Models} and {Cumulative} {Logics}},
+   URL        = {http://arxiv.org/abs/cs/0202021},
+   ABSTRACT   = {Many systems that exhibit nonmonotonic behavior have been described and studied already in the literature. The general notion of nonmonotonic reasoning, though, has almost always been described only negatively, by the property it does not enjoy, i.e. monotonicity. We study here general patterns of nonmonotonic reasoning and try to isolate properties that could help us map the ﬁeld of nonmonotonic reasoning by reference to positive properties. We concentrate on a number of families of nonmonotonic consequence relations, deﬁned in the style of Gentzen [13]. Both proof-theoretic and semantic points of view are developed in parallel. The former point of view was pioneered by D. Gabbay in [10], while the latter has been advocated by Y. Shoham in [38]. Five such families are deﬁned and characterized by representation theorems, relating the two points of view. One of the families of interest, that of preferential relations, turns out to have been studied by E. Adams in [2]. The preferential models proposed here are a much stronger tool than Adams’ probabilistic semantics. The basic language used in this paper is that of propositional logic. The extension of our results to ﬁrst order predicate calculi and the study of the computational complexity of the decision problems described in this paper will be treated in another paper.},
+   LANGUAGE   = {en},
+   URLDATE    = {2024-08-21},
+   PUBLISHER  = {arXiv},
+   AUTHOR     = {Kraus, Sarit
+               AND Lehmann, Daniel
+               AND Magidor, Menachem},
+   MONTH      = feb,
+   YEAR       = {2002},
+   NOTE       = {arXiv:cs/0202021},
+   KEYWORDS   = {Computer Science - Artificial Intelligence, I.2.3},
+   ANNOTE     = {Comment: Presented at JELIA, June 1988. Some misprints in the Journal paper have been corrected},
+   FILE       = {PDF:/Users/anton/Documents/Papers/Nonmonotonic Reasoning/KLM/Kraus et al. - 2002 - Nonmonotonic Reasoning, Preferential Models and Cumulative Logics.pdf:application/pdf},
 }
 
-@inproceedings{Pearl_SystemZ,
-author = {Pearl, Judea},
-title = {System Z: a natural ordering of defaults with tractable applications to nonmonotonic reasoning},
-year = {1990},
-isbn = {1558801058},
-publisher = {Morgan Kaufmann Publishers Inc.},
-address = {San Francisco, CA, USA},
-abstract = {Recent progress towards unifying the probabilistic and preferential models semantics for non-monotonic reasoning has led to a remarkable observation: Any consistent system of default rules imposes an unambiguous and natural ordering on these rules which, to emphasize its simple and basic character, we term "Z-ordering." This ordering can be used with various levels of refinement, to prioritize conflicting arguments, to rank the degree of abnormality of states of the world, and to define plausible consequence relationships. This paper defines the Z-ordering, briefly mentions its semantical origins, and illustrates two simple entailment relationships induced by the ordering. Two extensions are then described, maximum-entropy and conditional entailment, which trade in computational simplicity for semantic refinements.},
-booktitle = {Proceedings of the 3rd Conference on Theoretical Aspects of Reasoning about Knowledge},
-pages = {121–135},
-numpages = {15},
-location = {Pacific Grove, California},
-series = {TARK '90}
+@misc{lehmann:2002,
+  title         = {What does a conditional knowledge base entail?},
+  author        = {Daniel Lehmann and Menachem Magidor},
+  year          = {2002},
+  eprint        = {cs/0202022},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.AI},
+  url           = {https://arxiv.org/abs/cs/0202022}
 }
-
